Fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -133,8 +133,13 @@ body {
 	}
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 440px) {
 	.exercise-card {
 		width: 280px;
+	}
+
+	.detail-image {
+		width: 65%;
+		height: 250px;
 	}
 }
